# gh-proxy

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  Dockerfile.alpine  FAVICON_FIX.md  OPTIMIZATION_SUMMARY.md  README.md  compose.yaml  compose.yml  deny.toml  docker-entrypoint.sh  entrypoint.sh  rust-toolchain.toml
.github/workflows/: ci.yml  docker-build-push.yml  docker-publish.yml  release.yml
backend/: Cargo.toml
backend/benches/: cache_bench.rs
backend/config/: config.toml
backend/src/: api.rs  config.rs  errors.rs  lib.rs  main.rs  router.rs  shutdown_signal.rs  startup.rs  state.rs
backend/src/api/: config.rs  mod.rs  stats.rs
backend/src/cache/: config.rs  key.rs  manager.rs  metrics.rs  mod.rs  response_cache.rs  utils.rs
backend/src/cache/config/: mod.rs  pattern.rs  strategy.rs  tests.rs
backend/src/cache/key/: kind.rs  mod.rs  tests.rs  variant.rs
backend/src/cache/manager/: mod.rs  runtime.rs  tests.rs
backend/src/cache/response_cache/: build.rs  http.rs  mod.rs  tests.rs
backend/src/cache/utils/: cacheability.rs  cdn.rs  directives.rs  etag.rs  mod.rs  tests.rs
backend/src/config/: auth.rs  debug.rs  error.rs  host_pattern.rs  ingress.rs  log.rs  mod.rs  proxy.rs  rate_limit.rs  registry.rs  server.rs  settings.rs  shell.rs  tests.rs
backend/src/handlers/: files.rs  health.rs
backend/src/handlers/files/: assets.rs  cache.rs  mod.rs  paths.rs  responses.rs  tests.rs
backend/src/infra/: metrics.rs
backend/src/infra/metrics/: handler.rs  mod.rs
backend/src/infra/metrics/registry/: classify.rs  metrics.rs  mod.rs  snapshot.rs  tests.rs
backend/src/middleware/: ingress.rs  lifecycle.rs  mod.rs  origin_auth.rs  rate_limit.rs  request_metrics.rs  response_hardening.rs
backend/src/middleware/rate_limit/: entry.rs  mod.rs  tests.rs
backend/src/providers/: github.rs  registry.rs
backend/src/providers/github/: handler.rs  mod.rs  target.rs  url.rs
backend/src/providers/registry/: mod.rs  path.rs
backend/src/providers/registry/client/: auth.rs  mod.rs  resolve.rs
backend/src/providers/registry/client/operations/: health.rs  manifest.rs  mod.rs
backend/src/providers/registry/client/operations/blob/: debug.rs  fetch.rs  mod.rs
backend/src/providers/registry/handlers/: common.rs  manifest.rs  mod.rs  routes.rs
backend/src/providers/registry/handlers/blob/: debug.rs  mod.rs
backend/src/providers/registry/handlers/blob/read/: get.rs  head.rs  mod.rs  shared.rs  upload.rs
backend/src/proxy/: handler.rs  headers.rs  mod.rs  resolver.rs  stream.rs
backend/src/proxy/execute/: mod.rs
backend/src/proxy/execute/request/: mod.rs  permit.rs  prepare.rs  redirects.rs
backend/src/proxy/execute/response/: buffered.rs  mod.rs  streaming.rs  text.rs
backend/src/proxy/fallback/: cache.rs  handler.rs  mod.rs  response.rs
backend/src/proxy/headers/: github.rs  mod.rs  request.rs  response.rs  vary.rs
backend/src/proxy/resolver/: compression.rs  fallback.rs  mod.rs  redirect.rs  validate.rs
backend/src/services/: client.rs  request.rs  text_processor.rs
backend/src/services/client/: build.rs  error.rs  mod.rs  requests.rs  tests.rs
backend/src/services/request/: client_identity.rs  ingress.rs  mod.rs  public_url.rs  tests.rs
backend/src/services/text_processor/: mod.rs  patterns.rs  stream.rs  tests.rs
backend/src/utils/: constants.rs  errors.rs  mod.rs
backend/tests/: integration_test.rs  security_test.rs  streaming_test.rs
backend/tests/common/: mod.rs
config/: blacklist.json  config.toml
docker/: entrypoint.sh  smoke-test.sh
docs/: COMPATIBILITY.md  PRODUCTION_SECURITY_CHECKLIST.md  RELEASE_RUNBOOK.md  RELEASE_SCOPE.md  SECURITY_MODEL.md
frontend/: Cargo.toml  Dioxus.toml
frontend/dioxus-app/src/: api.rs  lib.rs  main.rs  styles.css
frontend/dioxus-app/src/components/: tabs.rs  toast.rs
frontend/dioxus-app/src/pages/: home.rs  mod.rs  status.rs
frontend/src/: api.rs
frontend/src/components/: button.rs  input.rs  mod.rs  toast.rs
frontend/src/pages/home/: allowed_hosts.rs  mod.rs  normalize.rs  output.rs
frontend/src/pages/status/: cards.rs  formatters.rs  mod.rs
scripts/: build-multiarch.sh  generate-release-notes.sh  release-preflight.sh  verify-release-version.sh
src/: api.rs  config.rs  docker.rs  errors.rs  github.rs  log.rs  main.rs  metrics.rs  router.rs  shutdown.rs  state.rs  stream_proxy.rs
src/handlers/: files.rs  health.rs  metrics.rs  mod.rs  static_files.rs
src/infra/: log.rs  metrics.rs  mod.rs
src/middleware/: lifecycle.rs  mod.rs  rate_limit.rs
src/providers/: github.rs  mod.rs  registry.rs
src/proxy/: handler.rs  headers.rs  resolver.rs  stream.rs
src/services/: blacklist.rs  client.rs  cloudflare.rs  ipinfo.rs  mod.rs  request.rs  shutdown.rs  text_processor.rs
src/utils/: cache.rs  errors.rs  mod.rs  regex.rs  url.rs
web/: app.js  index.html  manifest.json  script.js  status.html  style.css
