[package]
name = "gh-proxy"
version = "1.1.0"
edition = "2024"
[dependencies]
axum = { version = "0.8.6", features = ["http1", "http2"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "local-time"] }
thiserror = "2.0.17"
http = "1.3.1"
http-body-util = "0.1.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "json", "rustls-tls"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tokio-util = { version = "0.7.17", features = ["io"] }
async-compression = { version = "0.4.33", features = ["tokio", "gzip", "brotli"] }
hyper = { version = "1.7.0", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "webpki-roots", "ring"] }
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors"] }
regex = "1.12.2"
bytes = "1.10.1"
notify = "8.2.0"
[dev-dependencies]
tempfile = "3.23.0"
