[workspace]
members = [
    "backend",
    "frontend",
]
resolver = "3"

[workspace.package]
version = "1.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/vansour/gh-proxy"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.test]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
