[package]
name = "gh-proxy-frontend"
version = "1.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/vansour/gh-proxy"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard", "Request", "RequestInit", "Response", "Url"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"
regex = "1.12"
futures-util = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = []
